--- a/css/2 text-docortion/index.html
+++ b/css/2 text-docortion/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Text Decoration</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 
 
@@ -22,13 +21,15 @@
 <style>
 
     body {
+        /* width: 100; */
+        /* height: 100vh; */
         /* background-image: url(../../img/2.jpg); */
         /* background-size: 200px 200px; */
         /* background-repeat: no-repeat; */
         /* background-size: cover; */
         /* background-position: center; */
-        /* background: url(../../img/3.jpg) center / cover no-repeat; */
         /* background-attachment: fixed; */
+        /* background: url(../../img/3.jpg) center / cover no-repeat fixed; */
         /* background-blend-mode: darken; */
         /* background-color: rgba(0, 0, 0, 0.5); */
         /* color: snow; */
@@ -40,21 +41,21 @@
         /* text-decoration-line:  overline; */
         /* text-decoration-line:  line-through ; */
         /* text-decoration-line:  underline overline  line-through; */
-        /* text-decoration-style: solid ; */
+        /* text-decoration-style: solid; */
         /* text-decoration-style: dotted ; */
         /* text-decoration-style: dashed ; */
         /* text-decoration-style: double ; */
         /* text-decoration-style: wavy ; */
-        /* text-decoration-thickness:  2px; */
         /* text-decoration-thickness:  10%; */
+        /* text-decoration-thickness:  5px; */
         /* text-decoration-color: green; */
-        /* text-decoration: underline solid 3px red; */
-        /* text-transform: uppercase; */
+        text-decoration: underline solid 3px darkred;
         /* text-transform: lowercase; */
+        text-transform: uppercase;
         /* text-transform: capitalize; */
-        /* word-spacing: 20px; */
-        /* letter-spacing: 20px; */
-        /* line-height: 50px; */
+        word-spacing: 20px;
+        letter-spacing: 20px;
+        line-height: 50px;
     }
 
 
