--- a/html/table.html
+++ b/html/table.html
@@ -9,16 +9,27 @@
 
 <body>
 
+    <!-- <a href="index1.html">index1.html</a>
+    <br>
+    <a href="img-link.html">img-link.html</a>
+    <br>
+    <a href="global-attr.html">global-attr.html</a>
+    <br>
+    <a href="table.html">table.html</a>
+    <br>
+    <a href="list.html">list.html</a> -->
 
-    <table border="1px" bordercolor="red">
+    <table bordercolor="darkblue" border="10px">
         <tr>
             <th>text</th>
-            <th colspan="2">text</th>
-            <th rowspan="2">text</th>
+            <th>text</th>
+            <th>text</th>
+            <th>text</th>
         </tr>
         <tr>
-            <td>text</td>
             <td colspan="2" rowspan="2">text</td>
+            <td>text</td>
+            <td>text</td>
         </tr>
         <tr>
             <td>text</td>
@@ -32,15 +43,14 @@
         </tr>
     </table>
 
-
 </body>
+
 <style>
 
     table{
         width: 100%;
-        height: 250px;
+        height: 400px;
     }
-
 
     th,td{
         text-align: left;
@@ -50,6 +60,7 @@
         vertical-align: bottom;
         vertical-align: middle;
     }
+
 
 </style>
 
